[gd_scene load_steps=13 format=3 uid="uid://bpp3ktkr4itwi"]

[ext_resource type="Texture2D" uid="uid://cu6trg8gusuao" path="res://sprites/objects/Mushroom Sprite Animation.png" id="1_askc8"]
[ext_resource type="Script" uid="uid://bk5k30o7att5y" path="res://bouncy_mushroom.gd" id="1_bbpet"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbpet"]
size = Vector2(32, 69)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnwqn"]
atlas = ExtResource("1_askc8")
region = Rect2(0, 0, 35, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0e5d"]
atlas = ExtResource("1_askc8")
region = Rect2(35, 0, 35, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4cbf"]
atlas = ExtResource("1_askc8")
region = Rect2(0, 35, 35, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_5p7qq"]
atlas = ExtResource("1_askc8")
region = Rect2(35, 35, 35, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltp28"]
atlas = ExtResource("1_askc8")
region = Rect2(0, 70, 35, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3dol"]
atlas = ExtResource("1_askc8")
region = Rect2(35, 70, 35, 35)

[sub_resource type="SpriteFrames" id="SpriteFrames_23yjm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnwqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0e5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4cbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5p7qq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltp28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3dol")
}],
"loop": true,
"name": &"bounce_animation",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnwqn"]
size = Vector2(37, 32.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0e5d"]
size = Vector2(27.4575, 26.235)

[node name="bouncy mushroom" type="Area2D"]
script = ExtResource("1_bbpet")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_bbpet")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
physics_interpolation_mode = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_23yjm")
animation = &"bounce_animation"

[node name="bounce_player" type="Area2D" parent="."]
scale = Vector2(0.785, 0.785)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bounce_player"]
position = Vector2(0, 1.75)
shape = SubResource("RectangleShape2D_mnwqn")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_h0e5d")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="bounce_player" to="." method="_on_bounce_player_body_entered"]
